# Copyright 2021 The Bazel Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "libunwind",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "compiler-rt",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "use_libunwind",
    flag_values = {":libunwind": "True"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "use_compiler_rt",
    flag_values = {":compiler-rt": "True"},
    visibility = ["//visibility:public"],
)

# Sanitizers are enabled via Bazel features, not //toolchain/config flags:
#
#   --features=asan      (AddressSanitizer)
#   --features=ubsan     (UndefinedBehaviorSanitizer)
#   --features=tsan      (ThreadSanitizer)
#   --features=msan      (MemorySanitizer; Linux only)
#
# asan/ubsan/tsan are rules_cc's stock sanitizer cc_features. msan is wired up
# in cc_toolchain_config.bzl because it must swap in an instrumented libc++
# (supplied via the `libcxx_url`/`libcxx_sha256` attributes of the LLVM
# distribution repo). Using features (rather than flags) lets Bazel reset them
# to `--host_features` in the exec configuration, so build tools stay
# uninstrumented.
#
# The config_settings below match `--features=asan|ubsan|tsan` so
# cc_toolchain_config.bzl can `select()` extra flags onto the stock features
# (the C++ sanitizer runtime, and ubsan's bounds/nullability checks). Matching
# on `--features` keeps the exec-configuration reset: the extra flags are
# dropped for build tools just like the stock features are.

config_setting(
    name = "use_asan",
    values = {"features": "asan"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "use_ubsan",
    values = {"features": "ubsan"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "use_tsan",
    values = {"features": "tsan"},
    visibility = ["//visibility:public"],
)
