# Copyright 2018 The Bazel Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("llvm_distributions.bzl", "write_distributions")

exports_files(["template.modulemap"])

write_distributions(
    name = "llvm_distributions",
    testonly = True,
    visibility = ["//visibility:private"],
)

diff_test(
    name = "llvm_distributions_test",
    file1 = "llvm_distributions.golden.txt",
    file2 = "llvm_distributions",
)
